# tagu

./: Cargo.toml  README.md  generate_assets.sh
.github/: FUNDING.yml
assets/: html_example.html
examples/: adaptor.rs  adaptor2.rs  hello_world.rs  html.rs  simple.rs  simple_alt.rs  stack.rs  stack_function.rs  svg1.rs  svg2.rs  svg_alt.rs  svg_arc.rs  svg_polygon.rs
src/: attr.rs  build.rs  elem.rs  lib.rs  render.rs  stack.rs  tools.rs
