[package]
name = "tagu"
version = "0.1.4"
edition = "2021"
authors = ["Ken <kenakioreed@gmail.com>"]
license = "MIT"
repository = "https://github.com/tiby312/tagu"
description = "Write SVG / HTML / XML programmatically"
keywords = ["svg", "html","xml","tag","markup"]
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
